2005-10-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-bracket.cc (after_line_breaking): suicide empty
	tuplet bracket.
	(print): only connect to next bracket if the next one is alive.

2005-09-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bar-number-engraver.cc: correct docs.

	* scm/output-lib.scm (first-bar-number-invisible): rename from
	default-bar-number-visibility

2005-09-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-music-properties.scm (all-music-properties): remove
	predicate property.

2005-09-28  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: refresh.

2005-09-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/hara-kiri-pianostaff.ly (disappear): remove
	superfluous s1.
	(disappear): bugfix.

	* lily/stem-tremolo.cc (raw_stencil): read slope property.

	* lily/include/paper-system.hh (class Paper_system): remove
	staff_extents_ member.

	* lily/paper-system-scheme.cc (LY_DEFINE): remove.

	* lily/include/paper-system.hh (class Paper_system): remove
	number_ variable. Remove is_title_. Remove break_before_penalty_

	* lily/paper-book.cc (systems): use 'number property iso. number_
	member.

	* lily/paper-system-scheme.cc: remove ly:paper-system-break-before-penalty
	remove ly:paper-system-number.

	* scm/lily-library.scm (paper-system-title?): new function.

	* lily/book.cc (process): bugfix: flip ?: cases. 

	* Documentation/user/changing-defaults.itely (Difficult tweaks):
	add outputProperty.

	* ly/music-functions-init.ly: add outputProperty music function.

	* scm/paper.scm (set-paper-dimension-variables): add pagetopspace

	* scm/page-layout.scm (ly:optimal-page-breaks): read next-space
	and next-padding.
	(optimal-page-breaks): rename from ly:optimal-page-breaks.

	* lily/paper-system-scheme.cc (LY_DEFINE): new function.

	* lily/paper-system.cc (internal_get_property): new function.

	* Documentation/user/global.itely (Vertical spacing): refer to page-spacing.ly
